# collX_interview

./: .gitignore  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml  test.py  test_results.txt
config/: logging.conf
config/docker/compose/: docker-compose.test.yaml
config/docker/scripts/: test-entrypoint.sh
src/collx/: __init__.py  db.py  extract.py  match.py  test.py  utils.py
tests/: test_extract_info.py  test_match.py
